<resources>
    <string name="app_name">PineAppleB</string>
    <string name="dlna_device_title">"%s"正在播放中</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--首页标题-->
    <string-array name="discovery_tab">
        <item>推荐</item>
        <item>必看</item>
    </string-array>

    <!--关注标题-->
    <string-array name="focus_tab">
        <item>动态</item>
        <item>频道</item>
    </string-array>
    <!--详情页相关-->
    <string name="dynamic_talk">评论区</string>
    <string name="dynamic_recommend">更多推荐</string>
    <string name="dynamic_set">分集</string>
    <string name="dynamic_download">下载</string>
    <string name="dynamic_favor">马克</string>
    <string name="dynamic_share">安利</string>


    <!--最火标题-->
    <string name="hotest_tv">
        <item>最火</item>
    </string>
    <!--最火界面的播放量的单位-->
    <string name="hotest_play_count_unit">万</string>
    <string name="order">订单</string>
    <string name="commodity">商品</string>
    <string name="amount">总金额</string>
    <string name="details">商品详情</string>
    <string name="payment">支付</string>
    <string name="input_commodity">请输入商品名称</string>
    <string name="input_amount">请输入总金额</string>
    <string name="input_details">请输入商品详情</string>
    <string name="alipay">支付宝</string>
    <string name="wxpay">微信支付</string>
    <!--卫星菜单-->
    <string name="action_settings">Settings</string>
</resources>
